--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -47,7 +47,7 @@ import relogioicon from "../../assets/relogioicon.svg";
     <div class="px-6 py-4">
       <ul class="flex flex-col space-y-3">
       <li><a href="/#Home" class="block py-2 hover:text-teal-900 transition-colors">Início</a></li>
-      <li><a href="/#Section2" class="block py-2 hover:text-teal-900 transition-colors">Quem Somos</a></li>
+      <li><a href="/QuemSomos" class="block py-2 hover:text-teal-900 transition-colors">Quem Somos</a></li>
       <li><a href="/#Servicos" class="block py-2 hover:text-teal-900 transition-colors">Serviços</a></li>
       <li><a href="/CorpoClinico" class="block py-2 hover:text-teal-900 transition-colors">Corpo Clínico</a></li>
       </ul>
