--- a/src/components/Section3/index.astro
+++ b/src/components/Section3/index.astro
@@ -44,7 +44,7 @@ const doctors = [
   { img: lilian.src, title: "Alergista", text: "Dra. Lilian Maria" },
   { img: ricardo_neuro.src, title: "Neurologista", text: "Dr. Ricardo Tenório" },
   { img: solange.src, title: "Clínica Geral", text: "Dra. Solange Beltrão", objectTop: true },
-  { img: suzane.src, title:"Ginecologista", text:"Dra. Suzane Cabral", },
+  { img: suzane.src, title:"Ginecologista", text:"Dra. Suzane Cabral", objectTop: true},
   { img: thaysa.src, title: "Pneumologista", text: "Dra. Thaysa Alburquerque", objectTop: true },
   { img: ubirajara.src, title: "Ultrassonografista", text: "Dr. Ubirajara Matos", objectTop: true },
   { img: victoria.src, title: "Nutricionista", text: "Dra. Victoria Medeiros", objectTop: true },
