--- a/src/components/CorpoClinico/index.astro
+++ b/src/components/CorpoClinico/index.astro
@@ -54,7 +54,7 @@ const doctors = [
 ]
 ---
 
-<section class="flex flex-col items-center justify-center py-30 bg-[#F4F7FF]">
+<section class="flex flex-col items-center justify-center py-10 mb-10 bg-[#F4F7FF]">
     
     <DescriptionSection 
         img={IconePlus.src}
@@ -66,7 +66,13 @@ const doctors = [
       <div class="flex flex-wrap justify-center gap-4">
         {doctors.map((doctor) => (
           <div class="w-1/2 md:w-1/3 lg:w-1/6 flex justify-center">
-            <CardDoutores img={doctor.img} title={doctor.title} text={doctor.text} objectTop={doctor.objectTop} />
+            <CardDoutores 
+              img={doctor.img} 
+              title={doctor.title} 
+              text={doctor.text} 
+              objectTop={doctor.objectTop}
+              alt={`Foto de ${doctor.text}, ${doctor.title.toLowerCase()}`}
+            />
           </div>
         ))}
       </div>
