--- a/src/components/ui/Cards/CardDoutores.astro
+++ b/src/components/ui/Cards/CardDoutores.astro
@@ -6,7 +6,7 @@ export interface Props {
   conselho?: string
   objectTop?: boolean
   background?: string
-  alt?: string // Novo: alt opcional
+  alt?: string
 }
 const { img, title, text, conselho, objectTop, background = '#fff', alt } = Astro.props
 ---
