fix: Correções análise QA Quem Somos

--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -52,7 +52,7 @@ import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
           <a href="tel:+5582999689119" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
             <img src={Icontelefone.src} alt="Telefone" class="w-5 h-5" />
           </a>
-          <a href="mailto:contato@salluteclinica.com.br" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
+          <a href="mailto:salluteclinica@outlook.com" class="bg-teal-500 hover:bg-teal-400 p-2 rounded-full">
             <img src={Iconemail.src} alt="Email" class="w-5 h-5" />
           </a>
         </div>
@@ -67,7 +67,7 @@ import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
             Institucional
           </h4>
           <ul class="space-y-0.5 text-base text-[#FAFAFA]">
-            <li><a href="/QuemSomos#historia" class="hover:underline">Sobre Nós</a></li>
+            <li><a href="/QuemSomos#quemsomos" class="hover:underline">Sobre Nós</a></li>
             <li><a href="/QuemSomos#valores" class="hover:underline">Nossos Valores</a></li>
             <li><a href="/PoliticaPrivacidade" class="hover:underline">Política de Privacidade</a></li>
             <li><a href="/TermosUso" class="hover:underline">Termos de Uso</a></li>
@@ -83,9 +83,7 @@ import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
             <li><a href="/QuemSomos#quemsomos" class="hover:underline">Quem Somos</a></li>
             <li><a href="/QuemSomos#estrutura" class="hover:underline">Nossa Estrutura</a></li>
             <li><a href="https://wa.me/5582999689119" class="hover:underline">Trabalhe Conosco</a></li>
-            <li>
-              <a href="#" class="hover:underline">SAC - 82 9 9993-0051</a>
-            </li>
+            <li>SAC - 82 9 9993-0051</li>
           </ul>
         </div>
         <div class="text-left">
@@ -95,10 +93,10 @@ import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
             Serviços
           </h4>
           <ul class="space-y-0.5 text-base text-[#FAFAFA]">
+            <li><a href="/Servicos#fisioterapia" class="hover:underline">Fisioterapia</a></li>
             <li><a href="/Servicos#ultrassonografia" class="hover:underline">Ultrassonografia</a></li>
             <li><a href="/Servicos#depilacao" class="hover:underline">Depilação a Laser</a></li>
-            <li><a href="#" class="hover:underline">Exames em Geral</a></li>
-            <li><a href="#" class="hover:underline">Exames Laboratoriais</a></li>
+            <li>Exames em Geral</li>
           </ul>
         </div>
       </div>
