--- a/src/components/QuemSomos/index.astro
+++ b/src/components/QuemSomos/index.astro
@@ -12,7 +12,7 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
 
 <Section1 />
 
-<section id="quemsomos" class="flex flex-col items-center justify-center py-10 sm:py-16 gap-6 max-w-7xl mx-auto px-6 sm:px-7 lg:px-8 mt-10">
+<section id="quemsomos" class="scroll-mt-20 flex flex-col items-center justify-center py-10 sm:py-16 gap-6 max-w-7xl mx-auto px-6 sm:px-7 lg:px-8 mt-4">
     
     <DescriptionSection 
     img={IconePlus.src}
@@ -20,8 +20,8 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
     title='Conheça a Sallute Clínica Médica'
     />
     
-    <div id="historia" class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">
-        <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-15 lg:mt-25 mb-4 w-full text-left">
+    <div class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">
+        <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-10 lg:mt-20 mb-4 w-full text-left">
             Nossa História</h2>
         <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
             A Clínica Sallute nasceu em março de 2016 com um sonho simples, mas poderoso: cuidar de pessoas. Começamos com um único serviço, a fisioterapia, e desde o início já carregávamos conosco o compromisso de oferecer um atendimento humano, acolhedor e de excelência.</p>
@@ -43,15 +43,13 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
     <div class="flex flex-col gap-2 md:gap-3 lg:gap-5 px-2 lg:px-6">
         <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
             Visão</h2>
-        <p id="valores" class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
+        <p class="text-justify text-gray-700 leading-relaxed text-base sm:text-lg lg:text-2xl w-full">
             Ser referência regional em atendimento multiprofissional e exames de imagem, reconhecida pela ética, inovação e cuidado integral com o ser humano.</p>
 
 
-            <h2 class="text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
+            <h2 id="valores" class="scroll-mt-30 text-2xl sm:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-8 sm:mt-12 lg:mt-15 w-full text-left">
             Valores</h2>
         <ul class="list-disc pl-5 space-y-1 text-gray-700 text-justify leading-relaxed text-base sm:text-lg lg:text-2xl w-full mb-4">
-            <li>Humanização no atendimento;</li>
-            <li>Compromisso com a saúde;</li>
             <li>Humanização no atendimento;</li>
             <li>Compromisso com a saúde;</li>
             <li>Respeito e empatia;</li>
@@ -63,7 +61,7 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
 </section>
         
             
-<section id="estrutura" class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+<section id="estrutura" class="scroll-mt-20 flex flex-col items-center justify-center py-10 mb-15 gap-2 lg:gap-5 xl:gap-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <DescriptionSection 
         img={IconePlus.src}
         label='NOSSOS AMBIENTES'
@@ -73,12 +71,12 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
     <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full">
     
         <div class="relative w-full lg:w-4/4">
-            <img src={Fachada.src} alt="Recepção da Clínica" class="rounded-2xl w-full h-auto object-cover" />
+            <img src={Fachada.src} alt="Fachada da Clínica" class="rounded-2xl w-full h-auto object-cover" />
         </div>
     
         <div class="flex flex-row lg:flex-col w-full lg:w-1/2 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3">
-            <img src={Recepcao1.src} alt="Imagem Corredor"   class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
-            <img src={Recepcao2.src} alt="Imagem Sala de coletas" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
+            <img src={Recepcao1.src} alt="Recepção da Clínica" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
+            <img src={Recepcao2.src} alt="Recepção da Clínica" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
         
         </div>
     </div>
@@ -86,12 +84,12 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
     <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full mt-5 sm:mt-6 md:mt-7 lg:mt-8">
     
         <div class="flex flex-row lg:flex-col w-full lg:w-1/2 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3">
-            <img src={Corredor1.src} alt="Imagem Corredor"   class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
-            <img src={Corredor2.src} alt="Imagem Sala de coletas" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
+            <img src={Corredor1.src} alt="Imagem do Interior da Clínica"   class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
+            <img src={Corredor2.src} alt="Imagem do Interior da Clínica" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
         </div>
 
         <div class="relative w-full lg:w-4/4">
-            <img src={Sala.src} alt="Recepção da Clínica" class="rounded-2xl w-full h-auto object-cover" />
+            <img src={Sala.src} alt="Sala de Coletas da Clínica" class="rounded-2xl w-full h-auto object-cover" />
         </div>
     </div>
 
