--- a/src/components/Section4/index.astro
+++ b/src/components/Section4/index.astro
@@ -21,7 +21,7 @@ import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
         
         <div class="relative w-full lg:w-3/4">
             
-            <img src={Recepcao.src} alt="Recepção da Clínica" class="rounded-3xl w-full h-auto object-cover" />
+            <img src={Recepcao.src} alt="Recepção da Clínica" class="rounded-xl md:rounded-3xl w-full h-auto object-cover" />
             
             <div class="absolute bottom-0 left-0 right-0 px-3 sm:px-6 py-4 sm:py-6 flex flex-row items-end sm:items-center gap-2 sm:gap-6 rounded-b-3xl">
                 
