fix: Correção imagem da página Quem Somos

--- a/src/components/QuemSomos/index.astro
+++ b/src/components/QuemSomos/index.astro
@@ -5,7 +5,7 @@ import IconePlus from '../../assets/plus.svg'
 import Corredor1 from '../../assets/ImgsClinica/corredor1.svg';
 import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
 import Sala from '../../assets/ImgsClinica/sala.svg';
-import Fachada from '../../assets/ImgsClinica/fachada.jpg';
+import Fachada from '../../assets/ImgsClinica/fachada.svg';
 import Recepcao1 from '../../assets/ImgsClinica/recepcao1.svg';
 import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
 ---
