--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,9 @@ import "../styles/global.css";
 <!doctype html>
 <html lang="pt-BR">
   <head>
+
+    <meta name="google-site-verification" content="XOkusJMfae0YdoNrM9QoS8xVhNtnVt8_nPoe51ojbeE" />
+    
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
