--- a/src/components/Section3/index.astro
+++ b/src/components/Section3/index.astro
@@ -29,12 +29,12 @@ import larissa from "../../assets/especialistas/Larissa_Tenorio.jpeg"
 
 const doctors = [
   { img: diogo.src, title: "Psiquiatra", text: "Dr. Diogo Bento", objectTop: true },
-  { img: eliane.src, title: "Endocrinologista", text: "Dra. Eliane Calumby", objectTop: true },
+  { img: eliane.src, title: "Endocrinologista", text: "Dra. Eline Calumby", objectTop: true },
   { img: victor.src, title: "Dermatologista", text: "Dr. Victor Hugo" },
   { img: ricardo.src, title: "Nutricionista", text: "Ricardo Macena", objectTop: true},
   { img: cicero.src, title: "Ultrassonografista", text: "Dr. Cícero Almeida" },
   { img: eduardo.src, title: "Urologista", text: "Dr. Eduardo Nunes" },
-  { img: elfrida.src, title: "Neuropsicóloga", text: "Dra. Elfrida Gregório" },
+  { img: elfrida.src, title: "Neuropsicóloga", text: "Dra. Elfrida Lins" },
   { img: fabian.src, title: "Cardiologista", text: "Dr. Fabian Touret", objectTop: true },
   { img: irwins.src, title: "Urologista", text: "Dr. Irwins Souza" },
   { img: jandira.src, title: "Fonoaudióloga", text: "Dra. Jandira Maia" },
@@ -45,7 +45,7 @@ const doctors = [
   { img: lilian.src, title: "Alergista", text: "Dra. Lilian Maria" },
   { img: ricardo_neuro.src, title: "Neurologista", text: "Dr. Ricardo Tenório" },
   { img: solange.src, title: "Clínica Geral", text: "Dra. Solange Beltrão", objectTop: true },
-  { img: suzane.src, title:"Ginecologista", text:"Dra. Suzane Cabral", objectTop: true},
+  { img: suzane.src, title:"Ginecologista", text:"Dra. Suzana Cabral", objectTop: true},
   { img: thaysa.src, title: "Pneumologista", text: "Dra. Thaysa Alburquerque", objectTop: true },
   { img: ubirajara.src, title: "Ultrassonografista", text: "Dr. Ubirajara Matos", objectTop: true },
   { img: victoria.src, title: "Nutricionista", text: "Dra. Victoria Medeiros", objectTop: true },
