feat: Adicionar serviços "Exames em Geral"

--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -96,7 +96,7 @@ import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
             <li><a href="/Servicos#fisioterapia" class="hover:underline">Fisioterapia</a></li>
             <li><a href="/Servicos#ultrassonografia" class="hover:underline">Ultrassonografia</a></li>
             <li><a href="/Servicos#depilacao" class="hover:underline">Depilação a Laser</a></li>
-            <li>Exames em Geral</li>
+            <li><a href="/Servicos#exames" class="hover:underline">Exames em Geral</a></li>
           </ul>
         </div>
       </div>
