--- a/src/components/Section2/index.astro
+++ b/src/components/Section2/index.astro
@@ -57,12 +57,14 @@ section {
             title="Exames Laboratoriais"
         />
 
-        <CardEspecialidades
+        <div onclick="window.location.href = '/Servicos#exames'" style="cursor:pointer">
+            <CardEspecialidades
             img_background={imgDermato.src}
             img_logo={iconExamesGeral.src}
             alt="Exames em Geral"
             title="Exames em Geral"
-        />
+            />
+        </div>
 
         <div onclick="window.location.href = '/Servicos#depilacao'" style="cursor:pointer">
         <CardEspecialidades
