--- a/src/components/QuemSomos/index.astro
+++ b/src/components/QuemSomos/index.astro
@@ -8,6 +8,7 @@ import Sala from '../../assets/ImgsClinica/sala.svg';
 import Fachada from '../../assets/ImgsClinica/fachada.svg';
 import Recepcao1 from '../../assets/ImgsClinica/recepcao1.svg';
 import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
+import ImageDialog from '../../components/ui/ImageDialog/ImageDialog.astro';
 ---
 
 <Section1 />
@@ -69,27 +70,49 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
     />
 
     <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full mt-6 sm:mt-8">
-    
         <div class="relative w-full lg:w-4/4">
-            <img src={Fachada.src} alt="Fachada da Clínica" class="rounded-2xl w-full h-auto object-cover" />
+            <ImageDialog 
+                src={Fachada.src}
+                alt="Fachada da Clínica"
+                className="rounded-2xl w-full h-auto object-cover"
+            />
         </div>
     
         <div class="flex flex-row lg:flex-col w-full lg:w-1/2 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3">
-            <img src={Recepcao1.src} alt="Recepção da Clínica" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
-            <img src={Recepcao2.src} alt="Recepção da Clínica" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
-        
+            <ImageDialog 
+                src={Recepcao1.src}
+                alt="Recepção da Clínica"
+                className="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover"
+            />
+            <ImageDialog 
+                src={Recepcao2.src}
+                alt="Recepção da Clínica Invertida"
+                className="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover"
+            />
         </div>
     </div>
 
     <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full mt-5 sm:mt-6 md:mt-7 lg:mt-6 sm:mt-8">
     
         <div class="flex flex-row lg:flex-col w-full lg:w-1/2 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3">
-            <img src={Corredor1.src} alt="Imagem do Interior da Clínica"   class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
-            <img src={Corredor2.src} alt="Imagem do Interior da Clínica" class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
+            <ImageDialog 
+                src={Corredor1.src} 
+                alt="Imagem da Frente do Corredor"   
+                className="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover"
+            />
+            <ImageDialog 
+                src={Corredor2.src} 
+                alt="Imagem dos Fundos do Corredor"   
+                className="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover"
+            />
         </div>
 
         <div class="relative w-full lg:w-4/4">
-            <img src={Sala.src} alt="Sala de Coletas da Clínica" class="rounded-2xl w-full h-auto object-cover" />
+            <ImageDialog 
+                src={Sala.src} 
+                alt="Sala de Coletas da Clínica" 
+                className="rounded-2xl w-full h-auto object-cover" 
+            />
         </div>
     </div>
 
