--- a/src/components/Section4/index.astro
+++ b/src/components/Section4/index.astro
@@ -6,6 +6,7 @@ import Recepcao from '../../assets/ImgsClinica/recepcao.svg';
 import Sala from '../../assets/ImgsClinica/sala.svg';
 import Corredor1 from '../../assets/ImgsClinica/corredor1.svg';
 import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
+import ImageDialog from '../../components/ui/ImageDialog/ImageDialog.astro';
 ---
 
 <section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16">
@@ -20,11 +21,13 @@ import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
     <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-5 w-full max-w-7xl">
         
         <div class="relative w-full lg:w-3/4">
-            
-            <img src={Recepcao.src} alt="Recepção da Clínica" class="rounded-xl md:rounded-3xl w-full h-auto object-cover" />
+            <ImageDialog 
+                src={Recepcao.src}
+                alt="Recepção da Clínica"
+                className="rounded-xl md:rounded-3xl w-full h-auto object-cover"
+            />
             
             <div class="absolute bottom-0 left-0 right-0 px-3 sm:px-6 py-4 sm:py-6 flex flex-row items-end sm:items-center gap-2 sm:gap-6 rounded-b-3xl">
-                
                 <h1 class="text-white text-xs sm:text-base md:text-xl lg:text-2xl xl:text-4xl font-semibold max-w-full sm:max-w-xs md:max-w-md lg:max-w-lg xl:max-w-2xl">
                     Ambiente pensado nos mínimos detalhes para você e sua família!
                 </h1>
@@ -35,21 +38,26 @@ import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
                         href='https://www.instagram.com/sallute.clinica/'
                         className="text-xs sm:text-sm md:text-base px-3 py-1 sm:px-4 sm:py-2 whitespace-nowrap"
                     />
-                
                 </div>
-            
             </div>
-        
         </div>
 
         <div class="flex flex-row lg:flex-col w-full lg:w-1/4 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3 sm:px-6 lg:px-0">
-            
-            <img src={Corredor1.src} alt="Imagem Corredor"   class="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover" />
-            <img src={Sala.src} alt="Imagem Sala de coletas" class="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover" />
-            <img src={Corredor2.src} alt="Imagem Corredor"   class="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover" />
-        
+            <ImageDialog 
+                src={Corredor1.src}
+                alt="Imagem da Frente do Corredor"
+                className="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover"
+            />
+            <ImageDialog 
+                src={Sala.src}
+                alt="Imagem Sala de coletas"
+                className="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover"
+            />
+            <ImageDialog 
+                src={Corredor2.src}
+                alt="Imagem dos Fundos do Corredor"
+                className="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover"
+            />
         </div>
-    
     </div>
-
 </section>
